--- a/UtilityTools/libMonoTools/libMonoTools/libMonoTools.csproj
+++ b/UtilityTools/libMonoTools/libMonoTools/libMonoTools.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Data\Generic\ProjectContactInfo.cs" />
     <Compile Include="IO\LocalSystemTools.cs" />
     <Compile Include="ErrorManager\ErrorManagerEnums.cs" />
     <Compile Include="Collections\ErrorCollection.cs" />
@@ -99,15 +100,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="IO\" />
-    <Folder Include="UI\" />
-    <Folder Include="UI\Custom\" />
     <Folder Include="UI\Custom\Controls\" />
     <Folder Include="UI\Custom\Windows\" />
-    <Folder Include="Data\" />
-    <Folder Include="Data\Generic\" />
-    <Folder Include="Data\SQLite\" />
-    <Folder Include="Resources\Libs\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
