--- a/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
@@ -71,6 +71,11 @@
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="UI\Views\OptionsView.cs" />
     <Compile Include="gtk-gui\GUPdotNET.UI.Views.OptionsView.cs" />
     <Compile Include="UI\Views\DownloadView.cs" />
@@ -92,22 +97,19 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="UI\" />
-    <Folder Include="UI\Views\" />
-    <Folder Include="UI\CustomWidgets\" />
-    <Folder Include="Data\" />
-    <Folder Include="Resources\" />
-    <Folder Include="Resources\Images\" />
-    <Folder Include="GlobalTools\" />
-    <Folder Include="WebFiles\" />
+    <Content Include="docs\templates\ReleaseNotes.html" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="WebFiles\GetUpdateInfo.asp" />
     <None Include="WebFiles\GetUpdateInfo.aspx" />
     <None Include="WebFiles\GetUpdateInfo.php" />
     <None Include="WebFiles\UpdateCheck.xml" />
-    <None Include="WebFiles\XMLTemplate.xml" />
+    <None Include="docs\templates\GUPdotNETConfig.xml" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
