--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -1,39 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
-	<appSettings>
-		
-		<!-- For Debugging -->
-		<add key="Debug" value="true" />
-		<!-- 
-			Used to override the version information 
-			Can be used for testing or if static numbers are prefered
-			to the version info gotten from the calling assembly
- 		-->
-		<add key="MajorVersion" value="0" />
-		<add key="MinorVersion" value="1" />
-		<!-- BEGIN GUPdotNET AREA -->
-		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="MonoBPMonitor" />
-		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="Mono Blood Pressure Monitor" />
-		
-		<!-- 
-			The Operating System We Are Updating 
-			Expected Values = Windows, Linux, Mac
-		-->
-		<add key="OS" value="Windows" />
-		<!-- 
-			The type of install that is needed for this installation 
-			Expected Values = Installer, RPM, DEB, BIN, TGZ, SRC
-		-->
-		<add key="InstallType" value="Installer" />
-		
-		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/MBPMonitor/GetUpdateInfo.asp" />
-		
-		<!-- Logging Enable -->
-		<add key="SaveUpdateLog" value="true" />
-		<add key="SaveErrorLog" value="true" />		
-		<!-- END GUPdotNET AREA -->		
- 	</appSettings>
+<configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="GUPdotNET.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+  <appSettings>
+  </appSettings>
+  <applicationSettings>
+    <GUPdotNET.Properties.Settings>
+      <setting name="ProgramName" serializeAs="String">
+        <value>YahtzeeSharp</value>
+      </setting>
+      <setting name="ProgramTitle" serializeAs="String">
+        <value>YahtzeeSharp 2.0</value>
+      </setting>
+      <setting name="OS" serializeAs="String">
+        <value>Windows</value>
+      </setting>
+      <setting name="Processor64" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="InstallerType" serializeAs="String">
+        <value>msi</value>
+      </setting>
+      <setting name="UpdateInfoURL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="CurrentVersion" serializeAs="String">
+        <value>2.0</value>
+      </setting>
+      <setting name="XMLFileVersion" serializeAs="String">
+        <value>1.0</value>
+      </setting>
+      <setting name="RequireChecksum" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DebugMode" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </GUPdotNET.Properties.Settings>
+  </applicationSettings>
 </configuration>
