--- a/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
@@ -53,6 +53,8 @@
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <Reference Include="System.Core" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -85,7 +87,6 @@
     <Compile Include="gtk-gui\GUPdotNET.UI.Views.DownloadView.cs" />
     <Compile Include="UI\Views\InstallView.cs" />
     <Compile Include="gtk-gui\GUPdotNET.UI.Views.InstallView.cs" />
-    <Compile Include="Data\MetaInfo.cs" />
     <Compile Include="Data\Options.cs" />
     <Compile Include="GlobalTools\GlobalTools.cs" />
     <Compile Include="UpdateCheck.cs" />
