--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -9,6 +9,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <appSettings>
+		<add key="DebugMode" value="true" />
+		<add key="UpdatePackageURL" value="http://brdstudio.net/gupdotnet/UpdateConfig.xml" />
+		<add key="InstallType" value="exe" />
   </appSettings>
   <applicationSettings>
     <GUPdotNET.Properties.Settings>
