--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -4,6 +4,16 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <appSettings>
+    <!--
+        When debug mode is true addition output is produced to help
+        trouble shoot issues or facilitate new development.
+    -->
 		<add key="DebugMode" value="true" />
+    <!-- 
+        The name of the program being supported it is used
+        to perform simple tasks like nameing the config file so
+        that it is unique to the support program.
+    -->    
+    <add key="UpdateProgramName" value="YahtzeeSharp" />
   </appSettings>
 </configuration>
