--- a/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
@@ -30,6 +30,9 @@
     <ConsolePause>false</ConsolePause>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>GUPdotNET.MainClass</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
