--- a/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/GUPdotNET.csproj
@@ -9,6 +9,8 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>GUPdotNET</RootNamespace>
     <AssemblyName>GUPdotNET</AssemblyName>
+    <ReleaseVersion>1.0</ReleaseVersion>
+    <ApplicationIcon>Resources\Images\update_large.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +22,8 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <PlatformTarget>x86</PlatformTarget>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <GenerateDocumentation>true</GenerateDocumentation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
