--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="GUPdotNET.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
@@ -16,4 +21,26 @@
     -->    
     <add key="UpdateProgramName" value="YahtzeeSharp" />
   </appSettings>
+  <applicationSettings>
+    <GUPdotNET.Properties.Settings>
+      <setting name="DebugMode" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="UpdateFileName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UpdatePackageURL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="InstallerType" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProcessorType" serializeAs="String">
+        <value>Any</value>
+      </setting>
+      <setting name="ProjectWebSite" serializeAs="String">
+        <value>https://code.google.com/p/goontools/</value>
+      </setting>
+    </GUPdotNET.Properties.Settings>
+  </applicationSettings>
 </configuration>
