--- a/SoftwareUpdate/GUPdotNET/app.config
+++ b/SoftwareUpdate/GUPdotNET/app.config
@@ -41,6 +41,12 @@
       <setting name="ProjectWebSite" serializeAs="String">
         <value>https://code.google.com/p/goontools/</value>
       </setting>
+      <setting name="ErrorLog" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UpdateLog" serializeAs="String">
+        <value>False</value>
+      </setting>
     </GUPdotNET.Properties.Settings>
   </applicationSettings>
 </configuration>
