--- a/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
+++ b/SoftwareUpdate/GUPdotNET/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="ProjectWebSite" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://code.google.com/p/goontools/</Value>
     </Setting>
+    <Setting Name="ErrorLog" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UpdateLog" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
